--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Plastics in the Sea</title>
-
-		<meta name="description" content="Plastics in the Sea">
+		<title>Beach Clean Review 2014</title>
+		<meta name="description" content="Beach Clean Review 2014">
 		<meta name="author" content="Jo Cook">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -44,58 +43,60 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Plastics in the Sea</h1>
+					<h1>Beach Clean Review 2014</h1>
 				</section>
 
 				<section data-background="./images/plastic_bottles.png">
-					<h1 style="color:white"><b>80%</b></h1><h2 style="color:white">of marine debris is derived from plastics</h2>
-					<p style="color:white" class="fragment">10-100 items per km<sup>2</sup> in English Channel</p>
-					<p style="color:white" class="fragment">1 million items per km<sup>2</sup> in North Pacific Gyre</p>
-				</section>
-
+					<h2 style="color:white">Beach Clean Overview</h2>
+					<p style="color:white">Location: Half Moon Bay, Heysham</p>
+					<p style="color:white">Cleaned 4 times a year since 2009</p>
+				<section>
 
 				<section data-background="./images/helensburgh.jpg">
-					<h2 style="color:white">How does it get there?</h2>
-					<ul style="color:white">
-						<li style="color:white">Dumping at sea (although illegal since 1988)</li>
-						<li style="color:white">Marine fishing debris</li>
-						<li style="color:white">Rivers</li>
-						<li style="color:white">Sewage</li>
-						<li style="color:white">Beach litter</li>
-					</ul>
+					<h2 style="color:white">Every piece of litter recorded</h2>
 				</section>
 
 				<section>
-					<h2>Why is it a problem?</h2>
+					<h2>This Year</h2>
+					<ul>
+					<li>Clean-ups in December, March, June, September</li>
+					<li>A total of XXX metres cleaned</li>
+					<li>A total of XXX pieces of litter, comprising XXX bags, weighing XXX kg</li>
+					</ul>
+					</section>
+					
+				<section>
+				<h2>December in Detail</h2>
+				<ul>
+				<li>Major storms had damaged the sea defences</li>
+				<li>
+				</ul>	
 				</section>
 
 				<section data-background="./images/albatross.png">
-					<h2 style="color:white">It gets eaten by sea creatures</h2>
-					<p style="color:white" class="fragment">At least 267 marine species are known to have suffered from plastic ingestion or entanglement</p>
+					<h2 style="color:white">March Highlights</h2>
+					<p style="color:white" class="fragment"></p>
 				</section>
 
 				<section data-background="./images/microplastic.jpg">
-					<h2>Microplastics are bad for crustaceans and worms</h2>
-					<p class="fragment">They enter through gills and take 6 times longer to leave than through standard digestion</p>
-					<p class="fragment">Harmful chemicals such as flame retardants are ingested</p>
-					<p class="fragment">They may also retard digestion and reduce energy levels</p>
-					<p class="fragment">Can produce a severe immunological response</p>
+					<h2>June</h2>
+
+				<p class="fragment"></p>
 				</section>
 
 
 
 				<section data-background="./images/marine-plastic.jpg">
-					<h2>It doesn't biodegrade</h2>
+					<h2>September</h2>
 					<p class="fragment">It disintegrates into smaller pieces, whilst remaining a polymer</p>
-					<p class="fragment">Decomposition may concentrate pollutants and leach out toxins such as PCBs</p>
 				</section>
 
 				<section data-background="./images/FishStomachPlastic.png">
-					<h2 style="color:white">Affect on human health</h2>
+					<h2 style="color:white">Some basic analysis</h2>
 					<ul style="color:white">
-						<li style="color:white">Direct toxicity from lead, cadmium, mercury</li>
-						<li style="color:white">Carcinogens, birth defects, immune problems, child development defects from di-ethylhexyl phthalate (DEHP)</li>
-						<li style="color:white">Human hormonal disruption from Bisphenol-A (BPA)</li>
+						<li style="color:white">Number of items per square metre:</li>
+						<li style="color:white">Breakdown by source</li>
+						<li style="color:white">Breakdown by quarter</li>
 					</ul>
 				</section>
 
